Package: psCBS
==============

Version: 0.9.3 [2010-10-25]
o Added argument 'ciRange' to callAllelicBalance() and
  callExtremeAllelicImbalance().


Version: 0.9.2 [2010-10-24]
o BUG FIX: plotTracks() would give "Error: object 'nbrOfLoci' not found'
  for whole-genome plots.


Version: 0.9.1 [2010-10-20]
o Now plotTracks() can plot whole-genome data.


Version: 0.9.0 [2010-10-18]
o Added arguments 'alphaTCN' and 'alphaDH' to segmentByPairedPSCBS()
  with defaults according to the paper.


Version: 0.8.3 [2010-10-18]
o Now segmentByPairedPSCBS() can segment multiple chromosomes.


Version: 0.8.2 [2010-10-17]
o Added argument 'tbn' to segmentByPairedPSCBS() specifying whether
  TumorBoostNormalization should be applied or not.


Version: 0.8.1 [2010-10-10]
o The default for segmentByPairedPSCBS() is now to segment TCN on
  the original scale, not the sqrt().
o Added plotTracks() for PairedPSCBS.


Version: 0.8.0 [2010-10-06]
o CLEAN UP: Removed all old code, native code and help pages.


Version: 0.7.8 [2010-10-03]
o Added optional argument 'chromosome' to segmentByCBS().
  Note that at this point it is only used for annotating the
  results; it can not be used to segmented multiple chromosomes
  at ones.


Version: 0.7.7 [2010-09-26]
o Now subsetBySegments() and postsegmentTCN() for PairedPSCBS 
  handles multiple chromosomes.


Version: 0.7.6 [2010-09-24]
o Added support to annotating and subsetting also by chromosomes,
  as well as appending segmentation results from different chromosomes
  together.


Version: 0.7.5 [2010-09-21]
o Added postsegmentTCN() for PairedPSCBS, which updates the 
  TCN segment start and ends, estimates and counts given the
  DH segments.


Version: 0.7.4 [2010-09-18]
o Added argument 'chromosome' to segmentByPairedPSCBS(), which, if given,
  adds a chromosome column to the data and segmentation results.
o BUG FIX: plot() for PairedPSCBS used a non-defined variable.


Version: 0.7.3 [2010-09-16]